# SO2_P3

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Objects.h  README.md  SO2_P3.cbp  Scene.cpp  Scene.h  Simulation.cpp  Simulation.h  Sync.h  Visualisation.cpp  Visualisation.h  main.cpp
Objects/: Airplane.cpp  Airplane.h  Car.cpp  Car.h  Gate.cpp  Gate.h  Guard.cpp  Guard.h  Passenger.cpp  Passenger.h
Objects/Base/: Resource.cpp  Resource.h  Thread.cpp  Thread.h
